syntax = "proto3";
package pingerus.v1;

option go_package = "github.com/NordCoder/Pingerus/generated;generated";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

message Check {
  int32                     id           = 1;
  int32                     user_id      = 2;
  string                    host         = 3;
  int32                     interval_sec = 4;
  bool                      last_status  = 5;
  google.protobuf.Timestamp next_run     = 6;
  google.protobuf.Timestamp updated_at   = 7;
}

message CreateCheckRequest {
  int32  user_id      = 1;
  string host         = 2;
  int32  interval_sec = 3;
}

message CreateCheckResponse {
  Check check = 1;
}

message GetCheckRequest {
  int32 id = 1;
}

message DeleteCheckRequest {
  int32 id = 1;
}

message UpdateCheckRequest {
  Check check = 1;
}

message ListChecksRequest {
  int32 user_id = 1;
}

message ListChecksResponse {
  repeated Check checks = 1;
}

service CheckService {
  rpc CreateCheck(CreateCheckRequest) returns (CreateCheckResponse) {
    option (google.api.http) = {
      post: "/v1/checks"
      body: "*"
    };
  }
  rpc GetCheck(GetCheckRequest) returns (Check) {
    option (google.api.http) = {
      get: "/v1/checks/{id}"
    };
  }
  rpc UpdateCheck(UpdateCheckRequest) returns (Check) {
    option (google.api.http) = {
      put: "/v1/checks/{check.id}"
      body: "*"
    };
  }
  rpc DeleteCheck(DeleteCheckRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/checks/{id}"
    };
  }
  rpc ListChecks(ListChecksRequest) returns (ListChecksResponse) {
    option (google.api.http) = {
      get: "/v1/users/{user_id}/checks"
    };
  }
}